thêm hiệu ứng khiên cho checkcollisions